apps/generic/overlays/transmission/ingress-mousehole.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mousehole
  annotations:
    forecastle.stakater.com/appName: "Mousehole"
    forecastle.stakater.com/group: "Media"
    forecastle.stakater.com/expose: "true"
spec:
  rules:
    - host: mousehole.${CLUSTER_DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  name: mousehole
  tls:
    - hosts:
        - mousehole.${CLUSTER_DOMAIN_NAME}
      secretName: internal-ingress-cert
